[package]
name = "reddit_data_viz_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
plotters = "0.3.1"
log = "0.4"
env_logger = "0.9"
